@@ -421,6 +421,8 @@ finish_expr_stmt (tree expr)
     {
       if (!processing_template_decl)
 	expr = convert_to_void (expr, "statement");
+      else if (!type_dependent_expression_p (expr))
+	convert_to_void (build_non_dependent_expr (expr), "statement");
       
       r = add_stmt (build_stmt (EXPR_STMT, expr));
     }
